--- a/src/Authantication/OtpVerification/emailOtpVerification.css
+++ b/src/Authantication/OtpVerification/emailOtpVerification.css
@@ -1,3 +1,10 @@
+
+
+.otppage .loginpage {
+  background: url(../../images/signupbg.png) top center no-repeat;
+  background-size: 100% 100%;
+}
+
 .otpbox {
   width: 100%;
   max-width: 550px;
