--- a/src/Authantication/Login/login.css
+++ b/src/Authantication/Login/login.css
@@ -1,9 +1,10 @@
 .loginpage {
-    background: url(../../images/signupbg.png) top center no-repeat;
+    background: url(../../images/signinbg.png) top center no-repeat;
     background-size: 100% 100%;
     padding: 15px;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     display: flex;
     align-items: center;
 }
@@ -48,13 +49,13 @@
 }
 
 .login-box form .formbox label {
-    color: #3F3F3F;
+    color: #959895;
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     line-height: 1;
 }
 
@@ -121,7 +122,7 @@
     margin: 50px 0 0;
 }
 
-.alreadytext a {
+.alreadytext span {
     color: #EA6A12;
     text-decoration: none;
 }
@@ -137,7 +138,7 @@
     font-size: 16px;
 
 }
-.forgortext a{
+.forgortext span{
     color: #EA6A12;
     font-size: 16px;
     text-decoration: none;
@@ -156,4 +157,14 @@
 .login-box::-webkit-scrollbar-thumb {
     border-radius: 5px;
     background: linear-gradient(90.18deg, #8EC22C 2.36%, #379640 99.96%);
+}
+
+
+@media(max-width:580px){
+    .forgortext {
+        display: block;
+    }
+
+
+    
 }
