--- a/src/Authantication/Success /Success.css
+++ b/src/Authantication/Success /Success.css
@@ -1,3 +1,8 @@
+.successpage .loginpage {
+    background: url(../../images/sucessbg.png) top center no-repeat;
+    background-size: 100% 100%;
+  }
+
 .success-box {
     max-width: 450px;
     text-align: center;
