--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -1,15 +1,18 @@
-.hungerbox {
+.menupage {
     width: 100%;
     margin: 0 auto;
     max-width: 400px;
     padding: 10px;
     display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 .headerbox {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     width: 100%;
 }
 
@@ -30,8 +33,8 @@
     display: block;
     position: relative;
     margin-top: 25px;
-    padding-bottom: 25px;
-    border-bottom: 6px solid #F7F7FA;
+    width: 100%;
+    /* padding-bottom: 25px; */
 }
 
 .searchbox input {
@@ -39,6 +42,7 @@
     background: #F7F7FA;
     display: block;
     border: none;
+    width: 100%;
     outline: none;
     padding: 10px 40px 10px 10px;
     font-size: 18px;
@@ -152,7 +156,7 @@
 
 
 .itemmenu {
-    margin: 20px 0;
+    margin: 20px 0 0;
     padding-top: 20px;
     border-top: 6px solid #F7F7FA;
     /* */
@@ -174,7 +178,7 @@
     margin-top: 10px;
     margin-bottom: 0;
     padding-bottom: 20px;
-    border-bottom: 6px solid #F7F7FA; 
+    border-bottom: 6px solid #F7F7FA;
 }
 
 .itemlistbtn li {
@@ -186,7 +190,7 @@
     font-weight: 400;
     transition: all .3s;
     padding: 6px 15px;
-    
+
 }
 
 .itemlistbtn li span {
@@ -204,11 +208,38 @@
     color: #fff;
 }
 
+.menuitemtab {
+    margin: 20px 0 0;
+    border-bottom: 6px solid #F7F7FA;
+}
+
+.menuitem-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menuitemtab h2 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+
+.menuitemlist {
+    margin-bottom: 0;
+}
+
 .menuitemlist li {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #F4F0F0;   
-    padding:20px 0;
+    padding: 20px 0;
+}
+.menuitemlist li:not(:last-child){
+    border-bottom: 1px solid #F4F0F0;
 }
 
 .menuitemlist li .leftpart {
@@ -287,8 +318,28 @@
     border-radius: 10px;
 }
 
+.menulist {
+    position: fixed;
+    bottom: 100px;
+    right: 10px;
+}
 
+.menulist>ul {
+    position: absolute;
+    bottom: 40px;
+    right: 0;
+    background-color: #000;
+    padding: 10px;
+    border-radius: 10px;
+    padding-left: 10px !important;
+    width: 100px;
+}
 
+.menulist>ul>li {
+    color: #fff;
+    line-height: 2;
+}
 
-
-
+.menulist>ul>li:not(:last-child) {
+    border-bottom: 1px solid #6c6c6c;
+}
