--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -8,6 +8,20 @@
     position: relative;
 }
 
+.hadertopbar {
+    /* position: fixed; */
+    /* top: 0; */
+    /* z-index: 99; */
+    /* background: #fff; */
+    /* width: 380px; */
+  }
+  .menuitemtabsection {
+    /* padding-top: 192px; */
+}
+.specialbox{
+    /* padding-top: 192px; */
+}
+
 .headerbox {
     display: flex;
     align-items: center;
@@ -156,16 +170,16 @@
 
 
 .itemmenu {
-    margin: 20px 0 0;
-    padding-top: 20px;
-    border-top: 6px solid #F7F7FA;
+    /* margin: 20px 0 0; */
+    /* padding-top: 5px; */
+    /* border-top: 6px solid #F7F7FA; */
     /* */
 }
 
 
 .itemmenu h2 {
     color: #000;
-    font-family: 'Playfair Display', serif;
+    /* font-family: 'Playfair Display', serif; */
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
@@ -173,11 +187,12 @@
 }
 
 .itemlistbtn {
-    display: flex;
+     display: flex;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 0;
-    padding-bottom: 20px;
+    flex-wrap: wrap;
+    margin: 20px 0 0px;
+    padding: 20px 0;
+    border-top: 6px solid #F7F7FA;
     border-bottom: 6px solid #F7F7FA;
 }
 
@@ -190,15 +205,28 @@
     font-weight: 400;
     transition: all .3s;
     padding: 6px 15px;
+    white-space: nowrap;
+    margin-bottom: 5px;
+    margin-right: 10px;
 
+}
+.itemlistbtn .crossbtn{
+font-size: 15px;
 }
 
 .itemlistbtn li span {
+    /* margin-right: 5px; */
+}
+
+.itemlistbtn li .icon {
     margin-right: 5px;
+}
+.itemlistbtn li .crossbtn{
+    margin-left: 10px;
 }
 
 .itemlistbtn>li+li {
-    margin-left: 10px;
+    
 }
 
 .itemlistbtn li:hover,
@@ -218,6 +246,10 @@
 .menuitemtab {
     margin: 20px 0 0;
     border-bottom: 6px solid #F7F7FA;
+    overflow: auto;
+    height: calc(100vh - 255px);
+    padding-right: 4px;
+    position: relative;
 }
 
 .menuitem-title {
@@ -236,6 +268,9 @@
 }
 .menuitemtab .accordion-item {
     border: none;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    border-bottom: 3px solid #F7F7FA;
 }
 
 .menuitemtab .accordion-item .accordion-header .accordion-button {
@@ -243,7 +278,7 @@
     border-bottom: none;
     box-shadow: none;
     padding: 5px 0;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .menuitemtab .accordion-item .accordion-header .accordion-button::after {
@@ -333,25 +368,26 @@
     line-height: 1.5;
 }
 
-.menuitemlist li .rightpart img {
-    width: 100%;
-}
-
 .menuitemlist li .rightpart figure {
     margin: 15px 0 0;
-    width: 100px;
+    width: 100%;
     margin-left: auto;
 }
 
 .menuitemlist li .rightpart figure img {
     border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    min-height: 90px;
+    display: block;
 }
 
 .menulist {
     cursor: pointer;
     position: fixed;
-    bottom: 100px;
-    right: 10px;
+    /* position: absolute; */
+    bottom: 50px;
+    right: 30px;
 }
 
 .menulist>ul {
@@ -362,14 +398,37 @@
     padding: 10px;
     border-radius: 10px;
     padding-left: 10px !important;
-    width: 100px;
+    width: 130px;
 }
 
 .menulist>ul>li {
     color: #fff;
     line-height: 2;
 }
+.menulist>ul>li> a {
+    color: #fff;
+    display: block;
+    text-decoration: none;
+}
+.menulist > ul > li > a:hover,
+.menulist > ul > li > a.active { 
+    color: #EA6A12;
+}
 
 .menulist>ul>li:not(:last-child) {
     border-bottom: 1px solid #6c6c6c;
+}
+
+
+.menuitemtab::-webkit-scrollbar {
+    width: 2px;
+    background-color: #EA6A12;
+    border-radius: 10px;
+    padding: 0 1px;
+}
+
+.menuitemtab::-webkit-scrollbar-thumb {    
+    background-color: #000;
+    border-radius: 10px;
+
 }
