--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins&display=swap');
 
+ @font-face {
+  font-family: 'DIN 30640 Std';
+  src: url(./fonts/NeuzeitGroteskCondW01-Black.svg);
+  src: url('./fonts/DINNeuzeitGroteskStd-Light.eot');
+  src: url('./fonts/DINNeuzeitGroteskStd-Light.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/DINNeuzeitGroteskStd-Light.woff2') format('woff2'),
+      url('./fonts/DINNeuzeitGroteskStd-Light.woff') format('woff'),
+      url('./fonts/DINNeuzeitGroteskStd-Light.ttf') format('truetype'),
+      url('./fonts/DINNeuzeitGroteskStd-Light.svg#DINNeuzeitGroteskStd-Light') format('svg');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'NeuzeitGroteskCondW01';
+  src: url('./fonts/NeuzeitGroteskCondW01-Black.eot');
+  src: url('./fonts/NeuzeitGroteskCondW01-Black.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/NeuzeitGroteskCondW01-Black.woff2') format('woff2'),
+      url('./fonts/NeuzeitGroteskCondW01-Black.woff') format('woff'),
+      url('./fonts/NeuzeitGroteskCondW01-Black.ttf') format('truetype'),
+      url('./fonts/NeuzeitGroteskCondW01-Black.svg#NeuzeitGroteskCondW01-Black') format('svg');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'NeuzeitGroteskW01';
+  src: url('./fonts/NeuzeitGroteskW01-Regular.eot');
+  src: url('./fonts/NeuzeitGroteskW01-Regular.woff2') format('woff2'),
+      url('./fonts/NeuzeitGroteskW01-Regular.woff') format('woff'),
+      url('./fonts/NeuzeitGroteskW01-Regular.ttf') format('truetype'),
+      url('./fonts/NeuzeitGroteskW01-Regular.svg#NeuzeitGroteskW01-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'NeuzeitS-Book';
+  src: url('./fonts/NeuzeitS-Book.eot');
+  src: url('./fonts/NeuzeitS-Book.eot?#iefix') format('embedded-opentype'),
+      url('./fonts/NeuzeitS-Book.woff2') format('woff2'),
+      url('./fonts/NeuzeitS-Book.woff') format('woff'),
+      url('./fonts/NeuzeitS-Book.ttf') format('truetype'),
+      url('./fonts/NeuzeitS-Book.svg#NeuzeitS-Book') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
 body {
   padding: 0;
   margin: 0;
+
 }
 
 * {
