--- a/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
+++ b/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
@@ -16,7 +16,18 @@
     text-align: center;
     padding-bottom: 12px;
     border-bottom: 1px solid #E9ECEF;
+    cursor: pointer;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
+
+.sidebar > .logo .fulllogo{
+    display: none;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
+
 
 .navmenu li + li {
     margin-top: 15px;
@@ -30,7 +41,8 @@
 .navmenu li:hover,
 .navmenu li.active{
     background-color: #EA6A12;
-    transition: all .3s;
+    -webkit-transition: all.3s ease;
+    transition: all .3s ease;
 }
 
 .navmenu {
@@ -39,6 +51,8 @@
     justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: column;
+    -webkit-transition: all.3s ease;
+    transition: all .3s ease;
 }
 
 .navmenu li {
@@ -49,10 +63,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-transition: all.3s ease;
+    transition: all .3s ease;
 }
 
-.navmenu li svg {
-    fill: #fff;
+.navmenu li > .text {
+    display: none;
+    -webkit-transition: all.3s ease;
+    transition: all .3s ease;
 }
 
 
@@ -61,6 +79,8 @@
     height: calc(100vh - 63px);
     overflow: auto;
     padding: 20px 40px;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 
@@ -75,4 +95,79 @@
     background-color: #c65b13b2;
     border-radius: 100px;
 }
+
+
+.fullsidebar .sidebar{
+    width: 260px;
+}
+
+.fullsidebar .sidebar > .logo .smalllogo {
+    display: none;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
+.fullsidebar .sidebar > .logo .fulllogo {
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    display: block;
+    margin: 0 auto;
+}
+
+.fullsidebar .sidebar .navmenu li {
+width: auto;
+text-align: left;
+justify-content: flex-start;
+min-width: 220px;
+height: auto;
+padding: 10px 20px;
+border-radius: 1000px;
+background-color: #fff;
+margin-bottom: 15px;
+position: relative;
+
+}
+
+.fullsidebar .navmenu li > .text {
+    -webkit-transition: all.3s ease;
+    transition: all .3s ease;
+    display: inline-block;
+}
+  
+.fullsidebar .sidebar .navmenu li::after{
+    content: "";
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    width: 100%;
+    height: .5px;
+    background-color: #d8d8d8;
+    display: block
+}
+
+.fullsidebar .sidebar .navmenu li:hover ,
+.fullsidebar .sidebar .navmenu li.active {
+    background-color: #EA6A12;
+}
+
+.fullsidebar .sidebar .navmenu li > .text {
+    color: #aaa;
+    font-size: 16px;
+    margin-left: 10px;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+.fullsidebar .sidebar .navmenu li:hover > .text,
+.fullsidebar .sidebar .navmenu li.active > .text { 
+    color: #fff;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
+.fullsidebar .contentpart {
+    width: calc(100% - 260px);
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+
 
