--- a/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
+++ b/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
@@ -5,6 +5,10 @@
     background-size: 100% 100%;
 }
 
+.notifyimg{
+    cursor: pointer;
+}
+
 header {
     display: flex;
     align-items: center;
