--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -1,7 +1,5 @@
-
-
-.bannerbox{
-    background:url(../../../images/bannerbg.png) top center no-repeat;
+.bannerbox {
+    background: url(../../../images/bannerbg.png) top center no-repeat;
     background-size: 105% 100%;
     padding: 35px;
     border-radius: 25px;
@@ -37,14 +35,301 @@
     transition: all .3s ease;
 }
 
-.bannerbox .btn:hover { 
+.bannerbox .btn:hover {
     border: 1px solid #EA6A12;
     color: #EA6A12;
     background: #fff;
     transition: all .3s ease;
 }
 
+.viewall-part {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 50px 0 0;
+}
 
+.viewall-part>.leftpart {
+    width: 60%;
+}
+
+
+.topdishespart>.title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 0 20px;
+}
+
+.topdishespart>.title>h2 {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+.topdishespart>.title>button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+.topdishespart>.title>button img {
+    width: 18px;
+    height: 18px;
+    background-color: #EA6A12;
+    padding: 1px;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+
+
+.topdishestabpart {
+    width: 100%;
+}
+
+.topdishestabpart .nav-tabs {
+    border: none;
+}
+
+.topdishestabpart .nav-tabs .nav-link {
+    background-color: transparent;
+    border: none;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 19px;
+    margin-right: 20px;
+}
+
+.topdishestabpart .nav-tabs .nav-link:hover,
+.topdishestabpart .nav-tabs .nav-link.active {
+    background: rgba(234, 106, 18, 0.70);
+}
+
+.topdishestabpart .nav-tabs .nav-link figure {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    margin: 0 auto;
+    width: auto;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+}
+
+.topdishestabpart .nav-tabs .nav-link h3 {
+    color: #FFF;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.2;
+    letter-spacing: 0.235px;
+}
+
+.topdishestabpart .nav-tabs .nav-link .buttonbox {
+    width: 20px;
+    height: 20px;
+    background-color: #EA6A12;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+
+.topdishestabpart .nav-tabs .nav-link .buttonbox svg { 
+    stroke: #fff;
+}
+
+.topdishestabpart .nav-tabs .nav-link:hover .buttonbox,
+.topdishestabpart .nav-tabs .nav-link.active .buttonbox {
+    background-color: #fff;
+}
+
+
+.topdishestabpart .nav-tabs .nav-link:hover .buttonbox svg,
+.topdishestabpart .nav-tabs .nav-link.active .buttonbox svg {  
+    stroke: #EA6A12;
+}
+
+
+.topdishestabpart .tab-content {
+    margin: 20px 0 0;
+}
+
+.topdishestabpart .tab-content ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.topdishestabpart .tab-content ul li {
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 20px 10px;
+    transition: all .3s ease;
+    max-width: 197px;
+}
+
+.topdishestabpart .tab-content ul li + li {
+    margin-left: 10px;
+}
+
+.topdishestabpart .tab-content ul li h4 { 
+    color: #000;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.2;
+    margin: 0;
+    transition: all .3s ease;
+}
+
+.topdishestabpart .tab-content ul li p {
+    color: #8E8E8E;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 10px 0;
+    transition: all .3s ease;
+}
+
+.topdishestabpart .tab-content ul li .price{
+    color: #EA6A12;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.2;   
+    transition: all .3s ease;
+}
+
+
+.topdishestabpart .tab-content ul li:hover {
+    background: rgba(234, 106, 18, 0.70);
+    transition: all .3s ease;
+}
+
+.topdishestabpart .tab-content ul li:hover h4,
+.topdishestabpart .tab-content ul li:hover p,
+.topdishestabpart .tab-content ul li:hover .price {
+    color: #fff;
+    transition: all .3s ease;
+}
+
+
+.topdishestabpart .tab-content ul li .tabinfo{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.topdishestabpart .tab-content ul li .tabinfo > .leftpart {
+    width: 60%;
+    padding-right: 5px;
+}
+.topdishestabpart .tab-content ul li .tabinfo > .rightpart { 
+    width: 40%;
+    padding-left: 5px;
+}
+
+
+
+
+.managerstablepart {
+    margin: 50px 0 0;
+}
+
+.managerstablepart>.title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 0 20px;
+}
+
+.managerstablepart>.title>h2 {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+.managerstablepart>.title>button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+.managerstablepart>.title>button img {
+    width: 18px;
+    height: 18px;
+    background-color: #EA6A12;
+    padding: 1px;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+
+.managerstable tr {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(255, 255, 255, 0.60);
+    border-radius: 12px;    
+}
+
+.managerstable tr:not(:last-child){
+    margin-bottom: 15px;
+}
+
+.managerstable tr:first-child{
+    background: rgba(239, 148, 86, 0.70);
+    border-radius: 12px;
+}
+
+.managerstable th {
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: normal;
+    padding: 9px 5px;
+}
+
+
+.managerstable th:first-child,
+.managerstable td:first-child{
+    width: 50px;
+}
+
+
+.managerstable th:nth-child(2),
+.managerstable td:nth-child(2) {
+    width: 130px;
+}
+
+.managerstable th:nth-child(3),
+.managerstable td:nth-child(3) {
+    width: 200px;
+}
+
+.managerstable th:last-child ,
+.managerstable td:last-child  {
+    width: 340px;
+}
+
+.managerstable td {
+    color: #000;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: normal;
+    padding: 9px;
+}
 
 
 
