--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -244,9 +244,6 @@
     width: 100%;
 }
 
-
-
-
 .managerstablepart {
     margin: 50px 0 0;
 }
@@ -336,6 +333,104 @@
     letter-spacing: normal;
     padding: 9px;
 }
+
+
+.viewall-part>.rightpart {
+    width: 38%;
+}
+
+
+.subplanbox{
+    background:url(../../../images/planbg.svg) top right no-repeat;
+    background-size: cover;
+    border-radius: 19px;
+    padding: 20px 25px 10px;
+    width: 100%;
+}
+
+.subplanbox > .title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.subplanbox > .title h3 {
+    color: #000;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 1.3;
+    padding-right: 10px;
+}
+
+.subplanbox > .title button {
+    color: #000;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.3;
+    background-color: transparent;
+    border:none;
+    outline: none;
+}
+
+.subplanbox > .title button img{
+    margin-left: 5px;
+}
+
+.subplanbox > .info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.subplanbox > .info > .leftpart {
+    width: 50%;
+    padding-right: 10px;
+}
+
+.subplanbox > .info > .leftpart p {
+    color: #000;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.3;
+    margin-bottom: 10px;
+}
+
+
+.qrbox {
+    padding: 25px;
+    border-radius: 20px;
+    background: #FFF;
+    backdrop-filter: blur(21px);
+    text-align: center;
+    /* max-width: 400px; */
+    margin: 25px auto 0;
+}
+
+.qrbox > .info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 25px 0 0;
+}
+
+.qrbox > .info > span {
+    color: #000;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.3;    
+}
+
+.qrbox > .info button {
+    border: none;
+    outline: none;
+    background:transparent;
+    color: #EA6A12;
+    font-size: 16px;
+    line-height: 1.3;
+    font-weight: 700;
+}
+
+
 
 
 
