--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -15,7 +15,7 @@
     font-weight: 700;
 }
 
-.categorypage > .title .btnbox button {
+.btn1 , .btn2 {
     outline: none;
     box-shadow: none;
     font-size: 16px;
@@ -32,7 +32,7 @@
 
 .btn1 {
     border: 1px solid #EA6A12;
-    background-color: #fff;
+    background-color: #EA6A12;
     color: #EA6A12;
     -webkit-transition:  all .3s ease;
     transition: all .3s ease;
@@ -60,7 +60,7 @@
 }
 
 .btn2 {
-    border: 1px solid #fff;
+    border: 1px solid #EA6A12;
     background-color: #EA6A12;
     -webkit-transition:  all .3s ease;
     transition: all .3s ease;
