--- a/src/Components/DashboardComponents/Manager/manager.css
+++ b/src/Components/DashboardComponents/Manager/manager.css
@@ -153,25 +153,45 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, .4);
-
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 30px;
+    z-index: 999;
+    overflow: auto;
+}
+
+.addmanagerpopup.popup {
+    align-items: normal;
 }
 
 .addmanagerpopup .popupinner {
     border-radius: 12px;
     padding: 30px;
+    max-width: 700px;
     width: 90%;
     max-width: 700px;
     background-color: rgba(255, 255, 255, 1);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50% , -40%);
+    -o-transform: translate(-50% , -40%);
+    -ms-transform: translate(-50% , -40%);
+    transform: translate(-50% , -40%);   
 }
+
+
 
 .addmanagerpopup .popuptitle h2 {
     color: #000;
     font-size: 30px;
     line-height: 1.2;
-    margin: 0 0 25px;
+    margin-bottom: 50px;
+}
+
+.addmanagerpopup .popupinner .popupbody {
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .addmanagerpopup .popupinner .popupbody form {
@@ -184,15 +204,14 @@
     right: 20px;
 }
 
-.addmanagerpopup .popupinner .formbox label {
+.formbox label {
     color: #000;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.2;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
-
-.addmanagerpopup .popupinner .formbox .form-control {
+ .formbox .form-control {
     font-size: 16px;
     padding: 10px 15px;
     color: #000;
@@ -203,19 +222,7 @@
 }
 
 .addmanagerpopup .popupinner button {
-    background: rgba(205, 205, 205, 0.80);
-    padding: 5px 25px;
-    border: none;
-    outline: none;
-    color: #fff;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all .3s ease;
-}
-
-.addmanagerpopup .popupinner button:hover {
-    background: #EA6A12;
-    transition: all .3s ease;
+    padding: 8px 25px;    
 }
 
 
@@ -274,14 +281,16 @@
 
 /* scrollbar css start  */
 
-.managertable::-webkit-scrollbar {
+.managertable::-webkit-scrollbar,
+.addmanagerpopup .popupinner .popupbody::-webkit-scrollbar {
     height: 5px;
     width: 3px;
     background-color: #EF9456B2;
     border-radius: 100px;
 }
 
-.managertable::-webkit-scrollbar-thumb {
+.managertable::-webkit-scrollbar-thumb,
+.addmanagerpopup .popupinner .popupbody::-webkit-scrollbar-thumb {
     height: 5px;
     width: 3px;
     background-color: #c65b13b2;
