--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -33,7 +33,7 @@
 
 .btn1 {
     border: 1px solid #EA6A12;
-    background-color: #EA6A12;
+    background-color: #fff;
     color: #EA6A12;
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
