--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -1,6 +1,4 @@
-
-
-.categorypage > .title {
+.categorypage>.title {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -8,14 +6,16 @@
 }
 
 
-.categorypage > .title >  h2 {
+.categorypage>.title>h2 {
     color: #000;
     font-size: 32px;
     margin-bottom: 0px;
     font-weight: 700;
 }
 
-.btn1 , .btn2 {
+.btn1,
+.btn2,
+.btn3 {
     outline: none;
     box-shadow: none;
     font-size: 16px;
@@ -23,46 +23,47 @@
     line-height: 1.2;
     border-radius: 100px;
     padding: 10px 15px;
-  
+    cursor: pointer;
+
 }
 
-.categorypage > .title .btnbox button + button {
+.categorypage>.title .btnbox button+button {
     margin-left: 10px;
 }
 
 .btn1 {
     border: 1px solid #EA6A12;
-    background-color: #EA6A12;
+    background-color: #fff;
     color: #EA6A12;
-    -webkit-transition:  all .3s ease;
+    -webkit-transition: all .3s ease;
     transition: all .3s ease;
 }
 
-.btn1:hover{
+.btn1:hover {
     background-color: #EA6A12;
     color: #fff;
     border: 1px solid #EA6A12;
-    -webkit-transition:  all .3s ease;
+    -webkit-transition: all .3s ease;
     transition: all .3s ease;
 }
 
-.btn1 svg {   
+.btn1 svg {
     fill: #EA6A12;
     margin-right: 5px;
-    -webkit-transition:  all .3s ease;
+    -webkit-transition: all .3s ease;
     transition: all .3s ease;
 }
 
-.btn1:hover svg { 
+.btn1:hover svg {
     fill: #fff;
-    -webkit-transition:  all .3s ease;
+    -webkit-transition: all .3s ease;
     transition: all .3s ease;
 }
 
 .btn2 {
     border: 1px solid #EA6A12;
     background-color: #EA6A12;
-    -webkit-transition:  all .3s ease;
+    -webkit-transition: all .3s ease;
     transition: all .3s ease;
     color: #fff;
 }
@@ -70,7 +71,7 @@
 .btn2 svg {
     fill: #fff;
     margin-right: 5px;
-    -webkit-transition:  all .3s ease;
+    -webkit-transition: all .3s ease;
     transition: all .3s ease;
 }
 
@@ -79,85 +80,104 @@
     border: 1px solid #EA6A12;
     background-color: #fff;
     color: #EA6A12;
-    -webkit-transition:  all .3s ease;
+    -webkit-transition: all .3s ease;
     transition: all .3s ease;
 }
 
 .btn2:hover svg {
     fill: #EA6A12;
-    -webkit-transition:  all .3s ease;
+    -webkit-transition: all .3s ease;
     transition: all .3s ease;
 }
 
+.btn3{
+    padding: 10px 35px;
+    border: 1px solid rgba(205, 205, 205, 0.80);
+    border-radius: 563.025px;
+    background: rgba(205, 205, 205, 0.80);
+    color: #fff;
+}
+
+.btn3:hover{
+    background: #fff;
+    color: rgba(205, 205, 205, 0.80);
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
 
 .categorycontent {
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between;
 }
 
-.categorycontent > .leftpart {
+.submit.btn2{
+    padding: 10px 35px;
+}
+
+.categorycontent>.leftpart {
     width: 60%;
     padding-right: 15px;
 }
 
-.categorycontent > .rightpart {
+.categorycontent>.rightpart {
     width: 40%;
     padding-left: 15px;
 }
 
 
-.bestsellerpart{
+.bestsellerpart {
     padding: 25px;
     border-radius: 20px;
     background: rgba(255, 255, 255, 0.40);
     backdrop-filter: blur(21px);
 }
 
-.bestsellerpart > h2 {
+.bestsellerpart>h2 {
     color: #000;
     font-size: 28px;
     font-weight: 700;
     line-height: 1.3;
-    margin:0 0 30px;
+    margin: 0 0 30px;
 }
 
-.bestsellerpart > ul > li {
+.bestsellerpart>ul>li {
     display: flex;
     justify-content: space-between;
     margin: 20px 0;
     border-bottom: 1px solid #EA6A12;
     padding-bottom: 15px;
-    transition:  all .3s ease;
+    transition: all .3s ease;
     -webkit-transition: all .3s ease;
-}  
+}
 
-.bestsellerpart > ul > li:hover {
-    transition:  all .3s ease;
+.bestsellerpart>ul>li:hover {
+    transition: all .3s ease;
     -webkit-transition: all .3s ease;
     background: linear-gradient(180deg, rgba(217, 217, 217, 0.00) 0%, rgba(234, 106, 18, 0.20) 100%);
 }
 
-.bestsellerpart > ul > li > .leftpart {
+.bestsellerpart>ul>li>.leftpart {
     width: 100px;
     padding-right: 5px;
 }
-.bestsellerpart > ul > li > .leftpart > img {
+
+.bestsellerpart>ul>li>.leftpart>img {
     width: 100%;
 }
 
-.bestsellerpart > ul > li > .rightpart { 
+.bestsellerpart>ul>li>.rightpart {
     width: calc(100% - 100px);
 }
 
-.bestsellerpart > ul > li > .rightpart  h3 {
+.bestsellerpart>ul>li>.rightpart h3 {
     color: #000;
     font-size: 16px;
     font-weight: 700;
     line-height: 1.2;
     margin: 0;
-}  
+}
 
-.bestsellerpart > ul > li > .rightpart p{
+.bestsellerpart>ul>li>.rightpart p {
     color: #8E8E8E;
     font-size: 12px;
     font-weight: 400;
@@ -166,7 +186,7 @@
 }
 
 
-.bestsellerpart > ul > li > .rightpart .price{
+.bestsellerpart>ul>li>.rightpart .price {
     color: #EA6A12;
     font-size: 15px;
     font-weight: 400;
@@ -174,8 +194,117 @@
 }
 
 
+.uploadbtn-wrapper {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    cursor: pointer;
+    vertical-align: bottom;
+    margin-right: 10px;
+}
 
+.uploadbtn-wrapper>button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+    color: #EA6A12;
+}
 
+.uploadbtn-wrapper:hover>button {
+    color: #fff;
+}
 
+.uploadbtn-wrapper input[type=file] {
+    font-size: 100px;
+    width: auto;
+    height: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    cursor: pointer;
+}
 
+.addmenupopup .popuptitle {
+    margin-bottom: 25px;
+}
+
+.sarbox,
+.caloriesbox{
+    position: relative;
+}
+
+.sarbox::after,
+.caloriesbox::after  {
+    position: absolute;   
+    top: -1px;
+    right: -1px; 
+    height: calc(100% + 2px);
+    border-radius: 0px 12px 12px 0px;
+    background: #FFE8D8;
+    -webkit-backdrop-filter: blur(21px);
+    backdrop-filter: blur(21px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sarbox::after {
+    content: "Sar";
+    width: 37px;
+}
+
+.caloriesbox::after{
+    content: "kcal";
+    width: 47px;
+}
+
+.sarbox input.form-control {
+    padding-right: 40px;
+}
+
+.caloriesbox input.form-control {
+    padding-right: 50px;
+}
+
+.uploadwrapper{
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+}
+.uploadwrapper button {
+    cursor: pointer;
+    border: 1px solid #D2D2D2;
+    background-color: #D2D2D2;
+    padding: 5px 15px;
+    color: #8D8D8D;
+    font-size: 24px;
+    border-radius: 12px;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
+.uploadwrapper input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    display: block;
+    opacity: 0;    
+    cursor: pointer;
+}
+
+.addcategorypopup form {
+    position: relative;
+}
+
+.addcategorypopup form .categoryimg {
+    position: absolute;
+    top: -80px;
+    right: 0;
+    width: auto;
+    height: auto;
+}
 
