--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -88,12 +88,14 @@
 .topdishestabpart > nav {
     overflow: auto;
     width: 100%;
+    padding-bottom: 2px;
 }
 
 .topdishestabpart > nav > .nav { 
     width: 100%;
     min-width: 915px;
     margin: 1px 0;
+    flex-wrap: nowrap;
 }
 
 .topdishestabpart .nav-tabs {
@@ -469,15 +471,17 @@
 
 /* scrollbar css start  */
 
-.managerstable::-webkit-scrollbar {
-    height: 5px;
+.managerstable::-webkit-scrollbar,
+.topdishestabpart > nav::-webkit-scrollbar {
+    height: 1px;
     width: 3px;
     background-color: #EF9456B2;
     border-radius: 100px;
 }
 
-.managerstable::-webkit-scrollbar-thumb {
-    height: 5px;
+.managerstable::-webkit-scrollbar-thumb,
+.topdishestabpart > nav::-webkit-scrollbar-thumb {
+    height: 1px;
     width: 3px;
     background-color: #c65b13b2;
     border-radius: 100px;
