--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -128,15 +128,26 @@
     font-style: normal;
     font-weight: 400;
     line-height: 1.2;
+    position: relative;
     letter-spacing: 0.235px;
+    margin-bottom: 5px;
 }
+
+.topdishestabpart .nav-tabs .nav-link .editbtn { 
+    border: none;
+    outline: none;
+    background: transparent;
+    margin: 0;
+
+}
+
 
 .topdishestabpart .nav-tabs .nav-link .buttonbox {
     width: 20px;
     height: 20px;
     background-color: #EA6A12;
     border-radius: 50%;
-    margin: 0 auto;
+    margin: 6px auto 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -167,7 +178,7 @@
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-wrap: wrap;
 }
 
@@ -185,6 +196,13 @@
    margin-right: 0;
 }
 
+.topdishestabpart .tab-content ul li > .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
 .topdishestabpart .tab-content ul li h4 { 
     color: #000;
     font-size: 14px;
@@ -193,6 +211,22 @@
     margin: 0;
     transition: all .3s ease;
 }
+
+.topdishestabpart .tab-content ul li > .title { 
+
+}
+
+.topdishestabpart .tab-content ul li > .title button{
+    border: none;
+    outline: none;
+    background: transparent;
+    line-height: 1;
+}
+
+.topdishestabpart .tab-content ul li > .title button + button {
+    margin-left: 5px;
+}
+
 
 .topdishestabpart .tab-content ul li p {
     color: #8E8E8E;
