--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -107,6 +107,34 @@
     width: 100%;
     padding-bottom: 2px;
 }
+
+.topdishestabpart nav > .nav .swiper {
+    padding-bottom: 30px;
+}
+ 
+.topdishestabpart nav > .nav .swiper-button-prev,
+.topdishestabpart nav > .nav .swiper-button-next {
+    top: auto;
+    bottom: 0px;
+    background: url(../../../images/arrowsign.svg) top center no-repeat;
+    background-size: 100% 100%;
+    width: 52px;
+    height: 10px;
+}
+ 
+ 
+.topdishestabpart nav > .nav .swiper-button-next {
+    transform: rotate(-180deg);
+}
+ 
+.topdishestabpart nav > .nav .swiper-button-prev:after,
+.topdishestabpart nav > .nav .swiper-button-next:after{
+    font-size: 0;
+}
+ 
+.topdishestabpart nav > .nav .swiper-button-prev {
+ 
+}
  
 .topdishestabpart > nav > .nav {
     width: 100%;
@@ -122,9 +150,9 @@
     background-color: #fff;
     padding: 10px;
     border-radius: 19px;
-    margin-right: 20px;
-    min-width: 105px;
-}
+    width: 90%;
+    max-width: 100%;
+ }
 
 
 .topdishestabpart .nav-tabs .nav-link figure {
